# dragen

./: Cargo.toml  DOCS.md  README.md
.github/workflows/: ci.yml  release.yml
dragen-python/: Cargo.toml  pyproject.toml
dragen-python/src/: lib.rs
examples/: compare_pipelines.sh  debug_agent.rs  deep_research.py  deep_research_agent.rs  deep_research_pipeline.rs  deep_searcher.py  deep_searcher.rs  exa_search_agent.rs  exa_search_macro.rs  multi_agent_research.rs  simple_agent.rs  smolagents_report.md  smolagents_research.py  test_diagnostics.rs
src/: agent.rs  context.rs  error.rs  lib.rs
src/agent/: config.rs  convert.rs  events.rs  mod.rs  prompt.rs
