[package]
name = "dragen"
version = "0.1.0"
edition = "2024"
description = "CodeAct-style agent framework using Littrs sandbox"
license = "Apache-2.0"

[dependencies]
# LLM client
tanukie = { path = "../tanukie" }

# Python sandbox
littrs = { version = "0.2", features = ["macros"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Regex for parsing code blocks
regex = "1.11"

# HTTP client (for examples)
ureq = { version = "3", features = ["json"] }

# Async utilities (for parallel execution)
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
